@@ -31,6 +31,7 @@ public class AllTests extends TestSuite {
       suite.addTestSuite(org.xins.tests.common.ExceptionUtilsTests.class);
 
       suite.addTestSuite(org.xins.tests.common.collections.BasicPropertyReaderTests.class);
+      suite.addTestSuite(org.xins.tests.common.collections.expiry.ExpiryFolderTests.class);
 
       suite.addTestSuite(org.xins.tests.common.util.net.IPAddressUtilsTests.class);
       suite.addTestSuite(org.xins.tests.common.util.net.URLEncodingTests.class);
