@@ -9,6 +9,7 @@ CHANGES INTRODUCED IN XINS 0.213:                                (1.0.0-beta6)
   - Added the hashCode() and equals() method to the types Date and Timestamp.
   - Fixed the HTTPServiceCaller did not pass the arguments correctly when using
     the GET method.
+  - Added tests for the ExpiryFolder.
 
 * XINS/Java Client Framework:
   - Added more test using the AllInOne CAPI.
